<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CBeeber</string>
    <string name="app_description">Today\'s CBeebies Shows</string>

    <string name="main_menu_reload_title">Reload</string>
    <string name="programme_menu_iplayer_title">Watch in iPlayer</string>
    <string name="programme_menu_favourites_title">Add/Remove Favourite</string>
    <string name="programme_menu_favourite_add">Add Favourite</string>
    <string name="programme_menu_favourite_remove">Remove Favourite</string>

    <string name="main_menu_help_title">Help</string>
    <string name="help_menu_back">Back</string>
    <string name="main_menu_about_title">About</string>

    <string name="programme_detail">Programme Information</string>
    <string name="programme_iplayer">Go to iPlayer page</string>
    <string name="iplayer_cta">Click here to watch in CBeebies iPlayer:</string>
    <string name="schedule_favourite">*Favourite Programme*</string>
    <string name="programme_menu_schedule_title">Schedule</string>
    <string name="main_menu_favourites">Favourites</string>
    <string name="help_heading">CBeeber Help</string>
    <string name="help_content">Welcome to CBeeber, a simple application designed to give you fast access to the daily programme schedules for the BBC CBeebies Channel.\n\nTo use the app you must be in an approved territory, such as the UK. You must also have internet access.\n\nOn the first screen you are greeted by today\'s CBeebies schedule. If the channel is on-air the schedule will scroll to the currently playing programme and that programme will be accompanied by an animated Cbeebies bug.\n\nTap the refresh icon to reload the schedule from the BBC.\n\nTap the star icon to filter the schedule to only show your favourite shows.\n\nSelecting a show brings you to the programme page. Tap the iPlayer icon to watch the show in iPlayer on your device or toggle the star icon to mark or unmark a programme as a favourite.\n\nGestures are supported on the programme page. Swipe left to get back to the schedule page, swipe right to go straight to the iPlayer page. Multi-touch is also supported, tap the page with two or more fingers in order to add or remove the programme from the favourites list.\n\nThe App also includes a light sensor in the menu on this Help page - this allows you to check if the ambient light in your location is suitable for comfortably watching a programme on your device.</string>
    <string name="help_menu_sensor">Light Sensor</string>
</resources>
