<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/programme_menu_iplayer"
            android:title="@string/programme_menu_iplayer_title"
            android:icon="@drawable/ic_menu_iplayer"
            android:showAsAction="always|withText"/>

    <item
            android:id="@+id/programme_menu_favourites"
            android:title="@string/programme_menu_favourites_title"
            android:icon="@drawable/ic_menu_star"
            android:showAsAction="always|withText"/>

    <item
            android:id="@+id/programme_menu_schedule"
            android:title="@string/programme_menu_schedule_title"
            android:icon="@drawable/ic_menu_today"
            android:showAsAction="ifRoom|withText"/>

    <item
            android:id="@+id/programme_menu_help"
            android:title="@string/main_menu_help_title"
            android:icon="@drawable/ic_menu_help"
            android:showAsAction="never"/>



</menu>
